unset slide to fix clipping on cert carousel

--- a/src/styles.css
+++ b/src/styles.css
@@ -419,7 +419,7 @@ input:checked + .background-slider:before {
 .cert-img {
   min-width: 370px;
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
   border-radius: 4px;
   box-shadow: inset 0 0 0 1px rgb(255 255 255 / 20%), 0 4px 8px rgb(17 20 24 / 40%), 0 18px 46px 6px rgb(17 20 24 / 40%);
 }
@@ -1104,7 +1104,7 @@ section {
 
   .cert-img {
     max-width: 100%;
-    height: auto;
+    /* height: auto; */
     
   }
 
@@ -1496,9 +1496,9 @@ section {
     top: 170px;
   }
 
-  .slide {
+  /* .slide {
     height: unset;
-  }
+  } */
 
   /* .cert-div .slider .slide {
     min-width: 250px;
